completed challenge from Frontend Mentor
challange name: todo-app
source:  https://www.frontendmentor.io/challenges/todo-app-Su1_KokOW
languages: HTML, CSS (SCSS), Java Script/Type Script
tools used: flexbox, localstorage

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 Frontend Mentor/08_static-job-listings-master/dist/test.html
+Frontend Mentor/muj test/img/test.jpg
+Frontend Mentor/muj test/index.html
+Frontend Mentor/muj test/style.css
+.gitignore
