completed challenge from Frontend Mentor
challange name: Ip adress tracker
source: https://www.frontendmentor.io/challenges/ip-address-tracker-I8-0yYAH0
languages used: HTML, CSS (SCSS), Java Script/Type Script
tools used: flexbox, fetch
api used:
- IP Geolocation API by IPify (https://geo.ipify.org/)
- LeafletJS (https://leafletjs.com/)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Frontend Mentor/muj test/img/test.jpg
 Frontend Mentor/muj test/index.html
 Frontend Mentor/muj test/style.css
 .gitignore
+node_modules
